--- a/src/components/Header/Cart/styles/cart.sass
+++ b/src/components/Header/Cart/styles/cart.sass
@@ -51,3 +51,29 @@
             background-color: $notification
             border-radius: 50px
             margin-left: $m8tab
+
+@media (min-width: 1024px)
+
+    .cart-container
+
+        .bag-icon
+            font-size: $font24
+            color: $white
+
+        .cart-quantity
+            width: clamp(9px,0.93744vw,36px)
+            height: clamp(9px,0.93744vw,36px)
+            display: flex
+            align-items: center
+            justify-content: center
+            color: $white
+            text-align: right
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font12
+            font-style: normal
+            font-weight: 400
+            line-height: 142.857%
+            background-color: $notification
+            border-radius: 50px
+            margin-left: $m8
