--- a/src/components/ProductsList/styles/products_list.sass
+++ b/src/components/ProductsList/styles/products_list.sass
@@ -41,3 +41,17 @@
                 flex-direction: row !important
                 align-items: center
                 margin-top: clamp(24px,6.25vw,96px)
+
+@media (min-width: 1024px)
+
+    .products-list
+
+        .pc-container
+            width: 100%
+            display: flex
+
+        .product-swiper-2
+            width: 100%
+
+    .product-swiper
+        display: none !important
