--- a/src/components/Header/SearchBar/styles/search_bar.css
+++ b/src/components/Header/SearchBar/styles/search_bar.css
@@ -119,4 +119,51 @@
   .search-bar .search-button {
     font-size: clamp(9px, 1.9334049409vw, 36px) !important;
   }
+}
+@media (min-width: 1024px) {
+  .search-bar {
+    width: clamp(172.5px, 17.9676vw, 690px);
+    height: clamp(20px, 2.0832vw, 80px);
+    margin-top: 0px !important;
+  }
+  .search-bar .search-bar-input {
+    width: 50%;
+    height: auto;
+    font-size: clamp(7px, 0.72912vw, 28px);
+    display: flex;
+    align-items: center;
+    padding-left: clamp(8px, 0.83328vw, 32px);
+  }
+  .search-bar .select-search-container {
+    margin-right: clamp(8px, 0.83328vw, 32px);
+    display: flex;
+  }
+  .search-bar .select-search-container .select-list {
+    width: 70%;
+    height: 15px;
+    color: #262626;
+    font-feature-settings: "clig" off, "liga" off;
+    font-family: Lato;
+    font-size: clamp(7px, 0.72912vw, 28px);
+    font-style: normal;
+    font-weight: 400;
+    line-height: 142.857%;
+    margin-bottom: 10px;
+    border: none !important;
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  .search-bar .select-search-container .select-list:focus {
+    outline: none !important;
+  }
+  .search-bar .separator {
+    width: 1px;
+    height: clamp(16px, 1.66656vw, 64px) !important;
+    margin-right: clamp(6px, 0.62496vw, 24px) !important;
+    margin-left: clamp(6px, 0.62496vw, 24px) !important;
+    background-color: #9D9D9D;
+  }
+  .search-bar .search-button {
+    font-size: clamp(9px, 0.93744vw, 36px) !important;
+  }
 }/*# sourceMappingURL=search_bar.css.map */
